# pyradiomics-CUDA

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  setup_cuda.py  testLog.txt
notebooks/: helloRadiomics.ipynb
radiomics/: __init__.py  featureextractor.py  shape.py  shape2D.py
radiomics/cuda/biecek_test/: 2d_extractor_config.json  extractor_config.json  shape_features.txt  test.py  testImportat.ipynb
radiomics/cuda/biecek_test/data/2025-03-29_23-02-27/: mask_array.npy  volume.txt
radiomics/cuda/biecek_test/data/2025-03-30_00-05-42/: surface_area.txt
radiomics/src/: CMakeLists.txt  _cshape.c
radiomics/src/cuda/: .gitignore  CMakeLists.txt  _cshape.c  async_launcher.cuh  async_stream.cuh  basic_launcher.cuh  constants.cuh  cshape.c  cshape.cu  cshape.cuh  cshape.h  cshape_cuda.h  defines.cuh  gen_prof.bash  launcher.cuh  out.txt  square_launcher.cuh  structured_launcher.cuh  tables.cuh  test.cu  test.cuh  vertex_structure.cuh
radiomics/src/cuda/data/2025-03-30_20-32-22/: diameters.txt
radiomics/src/cuda/data/2025-03-30_20-33-11/: diameters.txt  surface_area.txt  volume.txt
radiomics/src/cuda/data/2025-03-30_20-34-02/: diameters.txt  surface_area.txt  volume.txt
radiomics/src/cuda/data/2025-03-30_20-34-03/: diameters.txt  mask_array.npy  surface_area.txt  volume.txt
radiomics/src/cuda/data/2025-03-30_20-34-04/: diameters.txt  mask_array.npy  pixel_spacing.npy  surface_area.txt  volume.txt
radiomics/src/cuda/implementations/: asnyc_launcher_implementation.cu  basic_implementation.cu  cpu_volumetry.cu  diameter_change_implementation.cu  ij_calculation_implemenetation.cu  ij_calculation_implmenetation.cu  improved_read_boost_1.cu  improved_reads_boost_2.cu  improved_shape.cu  reduced_reads.cu  reduced_reads_linear.cu  reduced_reads_no_atomics.cu  soa_implementation.cu  soa_reduced_atomics.cu  sol0.cu  sol1.cu  strange_implementation.cu  stream.cu  structured_implementation.cu
radiomics/src/cuda/shape/: basic_implementation.cuh  improved_shape.cuh  soa_shape.cuh  soa_shape_improved.cuh  structured_implementation.cuh  vector_soa_implementaion.cuh
radiomics/src/cuda/test/: data_transform.py  debug_macros.h  framework.c  framework.cpp  framework.h  inline_measurment.hpp  loader.c  loader.cpp  loader.h  main.c  main.cpp  shape_class_handlers.py  testImportat.ipynb  test_module.ipynb
radiomics/src/cuda/volumetry/: basic_implementation.cuh  ij_calculation_implementation.cuh  improved_atomic_implementation.cuh  improved_implementation.cuh  reduced_reads.cuh  reduced_reads_linear.cuh  reduced_reads_no_atomics.cuh  soa_implementation.cuh  soa_reduced_atomics.cuh  strange_implementation..cuh  structured_implementation.cuh
