[build-system]
requires = ["setuptools>=61.0", "numpy", "versioneer"]
build-backend = "setuptools.build_meta"

[project]
name = "pyradiomics-cuda"
version = "1.0.0"
authors = [
    { name = "Piotr Tyrakowski", email = "verscup@gmail.com"},
    { name = "Jakub Lisowski", email = "Jlisowskyy@gmail.com"},
    { name = "PyRadiomics Community", email = "pyradiomics@googlegroups.com"}
]
description = "CUDA-accelerated fork of PyRadiomics - a Radiomics features library for python"
readme = "README.md"
requires-python =">=3.5"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
keywords = [ "radiomics", "cancerimaging", "medicalresearch", "computationalimaging", "cuda", "gpu" ]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Intended Audience :: Science/Research',
    'Operating System :: OS Independent',
    'Programming Language :: C',
    'Programming Language :: CUDA',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Topic :: Scientific/Engineering :: Bio-Informatics'
]
dependencies = [
    "numpy",
    "SimpleITK",
    "PyWavelets",
    "pykwalify",
    "six"
]

[project.scripts]
pyradiomics = "radiomics.scripts.__init__:parse_args"

[project.urls]
"Homepage" = "https://github.com/PiotrTyrakowski/pyradiomics-CUDA"
"Original PyRadiomics" = "http://github.com/AIM-Harvard/pyradiomics#readme"
"Radiomics.io" = "https://www.radiomics.io/"
"Documentation" = "https://pyradiomics.readthedocs.io/en/latest/index.html"
"Docker" = "https://hub.docker.com/r/radiomics/pyradiomics/"
"Github" = "https://github.com/AIM-Harvard/pyradiomics"

[tool.setuptools]
packages = ["radiomics", "radiomics.scripts"]
include-package-data = true
